--- a/styles/style.css
+++ b/styles/style.css
@@ -3,29 +3,41 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
+    padding: 0;
 }
 
-header {
+header, footer {
     background-color: #1f2937;
+}
+
+ul {
+    padding: 0;
+    margin: 0;
+}
+
+.header-content { /*add other elemets*/
+    max-width: 1100px;
+    margin: auto;
+}
+
+.header-content {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-left: 20rem;
-    padding-right: 20rem;
 }
 
-header > h1 {
-    font-weight: 2rem;
+.header-content > h1 {
+    font-weight: 24px;
     color: #f9faf8;
 }
 
-header > ul {
+.header-content > ul {
     display: flex;
     list-style: none;
     gap: 20px;
 }
 
-header a {
+.header-content a {
     font-size: 18px;
     text-decoration: none;
     color: #e5e7eb;
