--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,8 @@
+:root {
+    --background-dark: #1f2937;
+    --title-light: #f9faf8;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -9,15 +14,12 @@ body {
     flex-direction: column;
 }
 
-header, footer {
-    background-color: #1f2937;
+.header, .footer, .hero {
+    background-color: var(--background-dark);
 }
 
-header {
-    padding: 1rem;
-}
 
-.header-content { /*add other elemets*/
+.header-content, .hero-content { /*add other elemets*/
     max-width: 1100px;
     margin: auto;
 }
@@ -26,11 +28,12 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 1rem;
 }
 
 .header-content > h1 {
     font-weight: 24px;
-    color: #f9faf8;
+    color: var(--title-light);
 }
 
 .header-content ul {
@@ -43,4 +46,30 @@ header {
     font-size: 18px;
     text-decoration: none;
     color: #e5e7eb;
+}
+
+.hero-content {
+    display: flex;
+    justify-content: center;
+    padding: 10rem 1rem;
+    gap: 1rem;
+}
+
+.hero-content > .left + .right {
+    flex-grow: 1;
+}
+
+.hero-content h1 {
+    color: var(--title-light);
+}
+
+.hero-content p {
+    color: #e5e7eb;
+}
+
+.hero-content > .right {
+    background-color: gray;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
