--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 body {
@@ -34,6 +35,7 @@ body {
 .header-content > h1 {
     font-weight: 24px;
     color: var(--title-light);
+    padding: 0 1rem;
 }
 
 .header-content ul {
@@ -55,16 +57,32 @@ body {
     gap: 1rem;
 }
 
-.hero-content > .left + .right {
-    flex-grow: 1;
-}
-
 .hero-content h1 {
     color: var(--title-light);
+    font-size: 48px;
 }
 
 .hero-content p {
     color: #e5e7eb;
+    font-size: 18px;
+}
+
+.hero-content > .left {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.hero-content > .left > button {
+    font-size: 18px;
+    font-weight: bold;
+    background-color: #3882F6;
+    color: var(--title-light);
+    padding: 0.5rem 1rem;
+    flex-grow: 0;
+    width: 130px;
+    border: 0;
+    border-radius: 8px;
 }
 
 .hero-content > .right {
@@ -72,4 +90,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-shrink: 0;
+    width: 50%;
+    height: 250px;
+    padding: 1rem;
 }
