--- a/styles/style.css
+++ b/styles/style.css
@@ -60,29 +60,25 @@ body {
 .hero-content h1 {
     color: var(--title-light);
     font-size: 48px;
+    margin-bottom: 0.5rem;
 }
 
 .hero-content p {
     color: #e5e7eb;
     font-size: 18px;
+    margin-bottom: 1rem;
 }
 
-.hero-content > .left {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-
-.hero-content > .left > button {
+.hero-content .main-button {
     font-size: 18px;
     font-weight: bold;
     background-color: #3882F6;
     color: var(--title-light);
     padding: 0.5rem 1rem;
-    flex-grow: 0;
     width: 130px;
     border: 0;
     border-radius: 8px;
+    cursor: pointer;
 }
 
 .hero-content > .right {
