--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,12 @@ body {
     background-color: var(--background-dark);
 }
 
-.header-content, .hero-content, .reviews-content, .quote-content, .cta-content { /*add other elemets*/
+.header-content, 
+.hero-content, 
+.reviews-content, 
+.quote-content, 
+.cta-content,
+.footer-content { /*add other elemets*/
     max-width: 1100px;
     margin: auto;
 }
@@ -52,6 +57,7 @@ body {
 .hero-content {
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap-reverse;
     padding: 10rem 1rem;
     gap: 1rem;
@@ -75,8 +81,7 @@ body {
     font-weight: bold;
     background-color: #3882F6;
     color: var(--title-light);
-    padding: 0.5rem 1rem;
-    width: 130px;
+    padding: 0.5rem 2rem;
     border: 0;
     border-radius: 8px;
     cursor: pointer;
@@ -85,7 +90,7 @@ body {
 .hero-content > .left {
     display: flex;
     flex-direction: column;
-    align-self: center;
+    align-items: start;
     flex-grow: 1;
     flex-basis: 25%;
     min-width: 300px;
@@ -207,4 +212,18 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.footer {
+    padding: 2rem 1rem;
+}
+
+.footer-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-content p {
+    color: #e5e7eb;
 }
