--- a/styles/style.css
+++ b/styles/style.css
@@ -59,7 +59,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-wrap: wrap-reverse;
-    padding: 10rem 1rem;
+    padding: 10% 1rem;
     gap: 1rem;
 }
 
